--- a/SemDinheiroApi.Application.csproj
+++ b/SemDinheiroApi.Application.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>234e6d86-349b-4b07-8b15-c57c698b8dab</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <RootNamespace>SemDinheiroapi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,12 +18,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.4.23259.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Databases\Repositories" />
+    <Folder Include="Repositories" />
     <Folder Include="Services" />
   </ItemGroup>
 
